--- a/app/index.html
+++ b/app/index.html
@@ -127,6 +127,9 @@
     <script src="/sections/recover/recoverController.js"></script>
     <script src="/sections/home/homeConfig.js"></script>
     <script src="/sections/home/homeController.js"></script>
+    <script src="/sections/inicio/inicioConfig.js"></script>
+    <script src="/sections/inicio/inicioController.js"></script>
+    <script src="/sections/inicio/editarInicio/editarInicioController.js"></script>
     <script src="/sections/noticias/noticiasConfig.js"></script>
     <script src="/sections/noticias/noticiasController.js"></script>
     <script src="/sections/noticias/crearNoticia/modalCrearNoticia.js"></script>
