--- a/app/sections/header/headerView.html
+++ b/app/sections/header/headerView.html
@@ -17,6 +17,7 @@
           <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
             <div class="menu_section">
               <ul class="nav side-menu">
+                <li><a href="/inicio"><i class="fa fa-home"></i> Inicio</a></li>
                 <li><a href="/noticias"><i class="fa fa-newspaper-o"></i> Noticias</a></li>
                 <li><a href="/nosotros"><i class="fa fa-users"></i> Nosotr@s</a></li>
                 <li><a href="/galeria"><i class="fa fa-image"></i> Galería</a></li>
